--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     ext.kotlin_version = '1.0.3'
-    ext.spring_boot_version = '1.3.0.RELEASE'
+    ext.spring_boot_version = '1.4.0.RELEASE'
     repositories {
         mavenCentral()
         jcenter()
@@ -24,6 +24,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.2-1"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'com.itextpdf:itextpdf:5.5.9'
 
     testCompile 'junit:junit'
