--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,3 +1,4 @@
 spring:
   resources:
-    staticLocations: classpath:/cliente/src,classpath:/cliente/node_modules,classpath:/cliente/dist
+    staticLocations: classpath:/static
+    #staticLocations: classpath:/cliente/src,classpath:/cliente/node_modules,classpath:/cliente/dist
