--- a/cliente/package.json
+++ b/cliente/package.json
@@ -25,6 +25,9 @@
     "@angular2-material/card": "^2.0.0-alpha.6",
     "@angular2-material/checkbox": "^2.0.0-alpha.6",
     "@angular2-material/core": "^2.0.0-alpha.6",
+    "@angular2-material/icon": "^2.0.0-alpha.6",
+    "@angular2-material/list": "^2.0.0-alpha.6",
+    "@angular2-material/menu": "^2.0.0-alpha.6-2",
     "@angular2-material/radio": "^2.0.0-alpha.6",
     "@angular2-material/toolbar": "^2.0.0-alpha.6",
     "es6-shim": "0.35.1",
