--- a/cliente/package.json
+++ b/cliente/package.json
@@ -28,6 +28,7 @@
     "@angular2-material/icon": "^2.0.0-alpha.6",
     "@angular2-material/list": "^2.0.0-alpha.6",
     "@angular2-material/menu": "^2.0.0-alpha.6-2",
+    "@angular2-material/progress-bar": "^2.0.0-alpha.6",
     "@angular2-material/radio": "^2.0.0-alpha.6",
     "@angular2-material/toolbar": "^2.0.0-alpha.6",
     "es6-shim": "0.35.1",
