--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,17 @@ apply plugin: 'application'
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.2-1"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     compile 'com.itextpdf:itextpdf:5.5.9'
+
+    compile 'mysql:mysql-connector-java:5.1.39'
+    //compile 'org.hsqldb:hsqldb:2.3.4'
+
+
 
     testCompile 'junit:junit'
 }
