Enlazar el cliente de angular 2 con el servidor
Enlazamos el cliente, con el servidor para lo cual usaremos los CORS.

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     compile 'mysql:mysql-connector-java:5.1.39'
     //compile 'org.hsqldb:hsqldb:2.3.4'
+    compile 'com.atlassian.commonmark:commonmark:0.6.0'
 
 
 
