--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
 
     testCompile 'junit:junit'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
 }
 repositories {
     mavenCentral()
